--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,11 +8,27 @@
     <button type="submit">Shorten</button>
   </form>
   {% if short_url %}
-    <div class="result">
-      <strong>Your short link:</strong>
-      <a href="{{ short_url }}" target="_blank" rel="noopener">{{ short_url }}</a>
-    </div>
-  {% endif %}
+  <div class="result">
+    <p>Short link:</p>
+    <!-- ===== BUG ===== -->
+    <p>
+      <a id="short-link" href="https://datadog.com" target="_blank">
+        {{ request.url_root.rstrip('/') }}/r/{{ short_code }}
+      </a>
+    </p>
+    <!-- ===== END BUG ===== -->
+
+    <!-- ===== FIX (uncomment this, and comment the BUG above, to fix) =====
+    <p>
+      <a id="short-link" href="{{ request.url_root.rstrip('/') }}/r/{{ short_code }}" target="_blank">
+        {{ request.url_root.rstrip('/') }}/r/{{ short_code }}
+      </a>
+    </p>
+    ===== END FIX ===== -->
+
+    <small class="muted">Deployed at: {{ deployed_at }}</small>
+  </div>
+{% endif %}
 </section>
 
 <section class="card">
