--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,8 +15,9 @@
         {{ short_url }}
       </a>
     </p>
-  
-    <small class="muted">Deployed at: {{ deployed_at }}</small>
+    <small class="muted">
+      Deployed at: {{ deployed_at }}{% if git_sha %} ({{ git_sha[:7] }}){% endif %}
+    </small>
   </div>
 {% endif %}
 </section>
