Testing bug fix

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
   <div class="result">
     <p>Short link:</p>
     <p>
-      <a class="short-link" href="{{ href }}" target="_blank" rel="noopener">
+      <a class="short-link" href="{{ short_href }}" target="_blank" rel="noopener">
         {{ short_url }}
       </a>
     </p>
